// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video on native renders a play icon correctly 1`] = `
<View>
  <svg
    height={70}
    width={70}
  >
    <rect
      fill="rgba(0,0,0)"
      fillOpacity="0.4"
      height="100"
      stroke="rgb(255,255,255)"
      strokeWidth="8"
      width="100"
    />
    <polygon
      fill="rgb(255,255,255)"
    />
  </svg>
</View>
`;

exports[`Video on native renders correctly 1`] = `
<View
  accessibilityLabel="splash-component"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="splash-component"
>
  <View
    style={
      Object {
        "height": 200,
        "width": 300,
      }
    }
  >
    <View
      style={
        Object {
          "height": 200,
          "width": 300,
        }
      }
    >
      <View
        style={
          Object {
            "height": "100%",
            "width": "100%",
          }
        }
      >
        <Image
          onLoad={[Function]}
          source={
            Object {
              "uri": "data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7&resize=1440",
            }
          }
          style={
            Object {
              "bottom": 0,
              "height": "100%",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
        />
        <View
          onLayout={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <BVLinearGradient
              colors={
                Array [
                  "#F9F9F9",
                  "#EDEDED",
                ]
              }
              end={
                Object {
                  "x": -0.09302964577578221,
                  "y": 0.11488204504197774,
                }
              }
              locations={
                Array [
                  0,
                  1,
                ]
              }
              start={
                Object {
                  "x": 1,
                  "y": 0,
                }
              }
              style={
                Object {
                  "flex": 1,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "height": 200,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 300,
        }
      }
    >
      <View>
        <svg
          height={70}
          width={70}
        >
          <rect
            fill="rgba(0,0,0)"
            fillOpacity="0.4"
            height="100"
            stroke="rgb(255,255,255)"
            strokeWidth="8"
            width="100"
          />
          <polygon
            fill="rgb(255,255,255)"
          />
        </svg>
      </View>
    </View>
  </View>
</View>
`;

exports[`Video on native renders correctly without a poster image 1`] = `
<View
  accessibilityLabel="splash-component"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
  testID="splash-component"
>
  <View
    style={
      Object {
        "height": 200,
        "width": 300,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "height": 200,
          "width": 300,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "height": 200,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": 300,
        }
      }
    >
      <View>
        <svg
          height={70}
          width={70}
        >
          <rect
            fill="rgba(0,0,0)"
            fillOpacity="0.4"
            height="100"
            stroke="rgb(255,255,255)"
            strokeWidth="8"
            width="100"
          />
          <polygon
            fill="rgb(255,255,255)"
          />
        </svg>
      </View>
    </View>
  </View>
</View>
`;
